feat():添加功能完成

--- a/src/page/Home/index.scss
+++ b/src/page/Home/index.scss
@@ -1,6 +1,6 @@
 .todoList {
   padding: 0;
-  li {
+  .list {
     height: 50px;
     line-height: 50px;
     width: 100%;
@@ -27,3 +27,4 @@
     }
   }
 }
+
