--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -15,11 +15,46 @@
       position: relative;
       overflow: auto;
       margin-bottom: 25px;
+      &::-webkit-scrollbar-track-piece { //滚动条凹槽的颜色，还可以设置边框属性
+        background-color:#f8f8f8;
+        border-radius: 2px;
+        }
+        &::-webkit-scrollbar {//滚动条的宽度
+        width:5px;
+        height:5px;
+        }
+        &::-webkit-scrollbar-thumb {//滚动条的设置
+        background-color:#dddddd;
+        background-clip:padding-box;
+        min-height:28px;
+        border-radius: 2px;
+        }
+        &::-webkit-scrollbar-thumb:hover {
+        background-color:#bbb;
+        }
     }
   }
   
   .navRight {
     height: calc(100vh);
-    // display: none
+    background-color: #F5F5F5;
+    overflow: auto;
+    &::-webkit-scrollbar-track-piece { //滚动条凹槽的颜色，还可以设置边框属性
+    background-color:#f8f8f8;
+    border-radius: 2px;
+    }
+    &::-webkit-scrollbar {//滚动条的宽度
+    width:5px;
+    height:5px;
+    }
+    &::-webkit-scrollbar-thumb {//滚动条的设置
+    background-color:#dddddd;
+    background-clip:padding-box;
+    min-height:28px;
+    border-radius: 2px;
+    }
+    &::-webkit-scrollbar-thumb:hover {
+    background-color:#bbb;
+    }
   }
 }
