--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -1,6 +1,5 @@
-.title {
-  font-size: 25px;
-  font-weight: bold;
-  color: #fff;
-  padding: 25px 0;
+.homeTitle {
+  h1 {
+    color: #ffffff;
+  }
 }
