--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -1,49 +1,18 @@
-.todoList {
-  padding: 0;
-  .list {
-    display: flex;
-    height: 50px;
+.homeList {
+  .itemFinish {
+    padding-right: 10px;
+  }
+  .itemStar {
+    float: right;
     line-height: 50px;
-    width: 100%;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    border-radius: 5px;
-    padding: 0 20px;
-    margin-top: 2px;
-    &:hover {
-      opacity: 0.9;
-      .close {
-        display: block;
-      }
-    }
-    .star {
-      line-height: 54px;
-      color: #60acea;
-      font-size: 18px;
-    }
-    .close {
-      line-height: 51px;
-      color: #ccc;
-      font-size: 14px;
-      padding-left: 5px;
-      display: none;
-    }
-    .finish {
-      font-size: 16px;
-      color: #60acea;
-      line-height: 54px;
-      padding-right: 10px;
-    }
-    .content {
-      flex: 1;
-      color: #6d6d6d;
-      &.finished {
-        color: #bebebe;
-        text-decoration: line-through;
-      }
-    }
-    
-    
   }
 }
 
+.homeListItem {
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  background-color: #fff;
+  border-radius: 5px;
+  padding: 0 20px;
+}
