--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -6,13 +6,19 @@
     float: right;
     line-height: 50px;
   }
+  .homeListItem {
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 0 20px;
+    margin-bottom: 2px;
+    .item {
+      display: inline-block;
+      width: 95%;
+    }
+  }
 }
 
-.homeListItem {
-  width: 100%;
-  height: 50px;
-  line-height: 50px;
-  background-color: #fff;
-  border-radius: 5px;
-  padding: 0 20px;
-}
+
