fix(DrawerContent)：使页面能修改内容

--- a/src/components/DrawerContent/index.scss
+++ b/src/components/DrawerContent/index.scss
@@ -23,6 +23,15 @@
     padding-bottom: 2px;
   }
   
+  .childrenStepInput {
+    border: none;
+    outline: none;
+    display: inline-block;
+    width: 90%;
+    border-bottom: 1px solid #ececec;
+    padding-bottom: 2px;
+  }
+  
   .childrenFinish {
     padding-right: 5px;
   }
