fix(NavRight)：修改标题以及聚焦问题

--- a/src/components/navRight/index.scss
+++ b/src/components/navRight/index.scss
@@ -6,6 +6,8 @@
     font-weight: bold;
     color: #333;
     padding: 20px 0;
+    border: none;
+    outline: none;
     &.finished {
       color: #777;
       text-decoration: line-through;
