fix(NavRight, Footer，NavRight):修改了增加Iconfont以及增加了左栏新增列表，右栏显示问题优化

--- a/src/components/navLeft/index.scss
+++ b/src/components/navLeft/index.scss
@@ -17,3 +17,12 @@
     line-height: 32px;
   }
 }
+
+.addNewList {
+  padding: 12px 16px;
+  input {
+    border: none;
+    outline: none;
+    padding-left: 10px;
+  }
+}
