--- a/src/components/navRight/index.scss
+++ b/src/components/navRight/index.scss
@@ -78,6 +78,47 @@
   }
 }
 
+
+.createTime {
+  display: flex;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  font-size: 13px;
+  height: 50px;
+  line-height: 50px;
+  background: #fff;
+  text-align: center;
+  .time {
+    flex: 1;
+  }
+  .clearTip {
+    line-height: 50px;
+    width: 50px;
+    .tip {
+      position: absolute;
+      right: 2px;
+      bottom: 50px;
+      font-size: 10px;
+      padding: 5px !important;
+      border: none;
+      background-color: #fff;
+      box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.4);
+      display: none;
+    }
+    &:hover {
+      .tip {
+        display: block;
+      }
+      background-color: #eceaea;
+      opacity: 0.7;
+      color: #ff0000;
+    }
+  }
+  
+}
+
 // todoStep
 .todoStep {
   display: flex;
