--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -7,6 +7,9 @@
   font-size: 25px;
   font-weight: bold;
   color: #fff;
+  border: none;
+  outline: none;
+  background-color: #60acea;
 }
 
 .more {
